# Trident-Titans-Greenhouse-RL

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  _run_api.py  check_graders.py  codelogic.md  dashboard.py  inference.py  instructions.md  models.py  openenv.yaml  pyproject.toml  run_tests.py  schema.json
greenhouse/: README.md  __init__.py  client.py  dashboard.py  models.py  openenv.yaml  pyproject.toml  train_ppo.py
greenhouse/server/: __init__.py  app.py  greenhouse_environment.py
greenhouse/tests/: test_environment.py
server/: app.py  greenhouse_environment.py
tests/: __init__.py  test_api.py  test_cases.py
